# ui_proejct

./: README.md  client.py  client_send_report.json  client_ui.py  e2e_test_inspect.py  provided_algorithm.py  pyproject.toml  server.py  ui.py
outputs/3029C003AA/2EQ16144/: step_0.json  step_1.json  step_10.json  step_11.json  step_12.json  step_13.json  step_14.json  step_2.json  step_3.json  step_4.json  step_5.json  step_6.json  step_7.json  step_8.json  step_9.json
