[project]
name = "ui-proejct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "uvicorn>=0.38.0",
]
